--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 scrapy = "^2.8.0"
+ipython = "^8.11.0"
+pymongo = "^4.3.3"
+matplotlib = "^3.7.1"
+plotly = "^5.13.1"
+pandas = "^1.5.3"
 
+
+[tool.poetry.group.dev.dependencies]
+autopep8 = "^2.0.2"
 
 [build-system]
 requires = ["poetry-core"]
