--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pymongo = "^4.3.3"
 matplotlib = "^3.7.1"
 plotly = "^5.13.1"
 pandas = "^1.5.3"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
